--- a/index.html
+++ b/index.html
@@ -3,81 +3,61 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Jen's Personal Site</title>
+  <title>Jenefer Peroso</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Kreon:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montez&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="jen.png" alt="jen's icon"></td>
-      <td><h1>Jenefer Peroso</h1>
-      <p><em>Freelance Web Developer</em></p>
-      <p>I am an <em><a href="https://cafetalk.com/tutor/profile/?id=138063&lang=en">online English tutor</a></em> and aiming to be more of a <em>digital nomad.</em>
-        I am beginning to learn web developing and start my journey from there to
-        more serious programming, animation and creating games and interactive
-        learning platforms.</p>
-      <a href="contactInformation.html">Contact Information</a></td>
-    </tr>
-  </table>
+  <div class="top-container">
+    <img class="first-cloud" src="images/cloud-sprite-png-1.png" alt="cloud-img">
+    <h1>I'm Jen.</h1>
+    <p>a web developer.</p>
+    <img class="second-cloud" src="images/cloud-sprite-png-1.png" alt="cloud-img">
+    <img class="mountain" src="images/clipart-mountain-animation.png" alt="mountain-img">
+  </div>
 
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-pic" src="images/photo3 (1).jpg" alt="character-img">
+      <h2>Hello.</h2>
+      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    </div>
 
-  <hr>
-  <h3>Career</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Position</th>
-        <th>Company</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2017</td>
-        <td>Human Resource Staff</td>
-        <td>Landmark</td>
-      </tr>
-      <tr>
-        <td>2017-2018</td>
-        <td>Customer Service Representative</td>
-        <td>FIS Global</td>
-      </tr>
-      <tr>
-        <td>2018-2020</td>
-        <td>Online English Tutor</td>
-        <td>Freelance</td>
-      </tr>
-    </tbody>
-  </table>
-<hr>
-  <h3>Education</h3>
-  <ul>
-    <li>BS of Business Administration Major in Human Resource Management</li>
-    <li>Secondary Education in Las Pinas National Highschool</li>
-  </ul>
-  <hr>
-  <h3>Interests</h3>
-   <ol>
-     <li>Watching Movies</li>
-     <li>Playing Cuphead</li>
-     <li>Listening to Music</li>
-   </ol>
-<hr>
-   <h3>Skills</h3>
-   <table cellspacing="10">
-     <tr>
-       <td>Computer Literate</td>
-       <td>💙💙💙💙💙</td>
-     </tr>
-     <tr>
-       <td>Bilingual</td>
-       <td>💙💙💙💙💙</td>
-     </tr>
-     <tr>
-       <td>Animation</td>
-       <td>💙💙💙🖤🖤</td>
-     </tr>
-   </table>
+    <div class="skills">
+      <div class="skill-row">
+        <img class="drawing" src="images/e2f6d359f8f3724b4187e805c56e96d5.gif" alt="drawing-img">
+        <h3>Drawing and Animation</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+
+      <div>
+        <img class="teaching" src="images/Flat-Design-Character-business-woman.gif" alt="teaching-img">
+        <h3>Teaching</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+
+      <div>
+        <img class="DIY" src="images/dd40fb946e576f3ec1fa0d33fcc4228c.gif" alt="DIY-img">
+        <h3>DIY</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+
+    <div class="contact-me">
+      <h2 class="contact">Get In Touch</h2>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:jeneferperoso@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p>© 2020 Jenefer Peroso.</p>
+  </div>
 </body>
 
 </html>
